[tool.flake8]
extend-ignore = "E501,W503"

[tool.isort]
profile = "black"

[tool.poetry]
name = "slack-feedly-token-updater"
version = "0.1.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
slack-bolt = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
isort = {extras = ["pyproject"], version = "^5.13.2"}
pyproject-flake8 = "^0.0.1-alpha.4"
mypy = "^1.14"
pydocstyle = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
